--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DiceRoll</string>
     <string name="roll_btn" > Roll </string>
+    <string name="dice_roll_image">dice image that will rolls</string>
 </resources>
